fix: Fix nav indigator is covered

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -155,7 +155,7 @@ h1 {
   right: 3rem;
   bottom: 3rem; 
   position: fixed;
-  z-index: 3;
+  z-index: 30;
 }
 
 .nav-wrap--main-wrap {
@@ -175,7 +175,7 @@ h1 {
   box-shadow: 0 0 25px 0 #0001;
   font-size: 1.3rem;
   cursor: pointer;
-  z-index: 2;
+  z-index: 20;
   position: relative;
 }
 
@@ -187,7 +187,7 @@ h1 {
   position: absolute;
   left: 0;
   bottom: 0;
-  z-index: 1;
+  z-index: 10;
   background-color: #fff;
   border-radius: 100px;
   box-shadow: 0 0 25px 0 #0001;
@@ -207,7 +207,7 @@ h1 {
   display: none;
   transition: all ease-in-out .5s;
   background-color: transparent;
-  z-index: 6;
+  z-index: 60;
   position: relative;
 }
 
@@ -245,7 +245,7 @@ h1 {
   background-color: var(--secondary-color-light);
   transition: all ease-in-out .5s;
   border-radius: 50%;
-  z-index: 5;
+  z-index: 50;
 }
 
 /* indicator animation */
